[metadata]
name = buoy_analytics
description = Collect and analyse time series data from the National Data Buoy Center.
author = Veonms

[options]
packages = 
    buoy_analytics
install_requires =
    pydantic>=1.10.0
    pandas==1.5.0
python_requires = >=3.11
package_dir = 
    =src
zip_safe = no

[options.package_data]
buoy_analytics = py.typed